// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:DYNAMIC_IMPORT_REGEX > conditional imports > should match conditional import 1`] = `
{
  "0": "mod = await import('module-used-on-server')",
  "1": "mod",
  "2": "import('module-used-on-server')",
  "3": "'module-used-on-server'",
  "4": undefined,
  "groups": {
    "expression": "import('module-used-on-server')",
    "imports": "mod",
    "options": undefined,
    "specifier": "'module-used-on-server'",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > dynamic specifiers > should match import with template literal as specifier 1`] = `
{
  "0": "import(\`/modules/module-\${index}.js\`)",
  "1": undefined,
  "2": "import(\`/modules/module-\${index}.js\`)",
  "3": "\`/modules/module-\${index}.js\`",
  "4": undefined,
  "groups": {
    "expression": "import(\`/modules/module-\${index}.js\`)",
    "imports": undefined,
    "options": undefined,
    "specifier": "\`/modules/module-\${index}.js\`",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > dynamic specifiers > should match import with variable as specifier 1`] = `
{
  "0": "await import(foo)",
  "1": undefined,
  "2": "import(foo)",
  "3": "foo",
  "4": undefined,
  "groups": {
    "expression": "import(foo)",
    "imports": undefined,
    "options": undefined,
    "specifier": "foo",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > import assertions > should match import with import assertion 1`] = `
{
  "0": "await import('__tests__/report.json', {
  assert: { type: 'json' }
})",
  "1": undefined,
  "2": "import('__tests__/report.json', {
  assert: { type: 'json' }
})",
  "3": "'__tests__/report.json'",
  "4": "{
  assert: { type: 'json' }
}",
  "groups": {
    "expression": "import('__tests__/report.json', {
  assert: { type: 'json' }
})",
    "imports": undefined,
    "options": "{
  assert: { type: 'json' }
}",
    "specifier": "'__tests__/report.json'",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > named imports > should match named import(s) in multi-line statement 1`] = `
{
  "0": "const {
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
} = await import('./lib')",
  "1": "{
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
}",
  "2": "import('./lib')",
  "3": "'./lib'",
  "4": undefined,
  "groups": {
    "expression": "import('./lib')",
    "imports": "{
  addFive,
  addFour,
  addThree,
  addTwo,
  squareFive,
  squareFour,
  squareThree,
  squareTwo
}",
    "options": undefined,
    "specifier": "'./lib'",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > named imports > should match named import(s) in single-line statement 1`] = `
{
  "0": "const { readPackage } = await import(\\"read-pkg\\")",
  "1": "{ readPackage }",
  "2": "import(\\"read-pkg\\")",
  "3": "\\"read-pkg\\"",
  "4": undefined,
  "groups": {
    "expression": "import(\\"read-pkg\\")",
    "imports": "{ readPackage }",
    "options": undefined,
    "specifier": "\\"read-pkg\\"",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > named imports > should match named import(s) with renamed identifiers 1`] = `
{
  "0": "const {
      default: myDefault,
      foo,
      bar,
    } = await import('/modules/my-module.js')",
  "1": "{
      default: myDefault,
      foo,
      bar,
    }",
  "2": "import('/modules/my-module.js')",
  "3": "'/modules/my-module.js'",
  "4": undefined,
  "groups": {
    "expression": "import('/modules/my-module.js')",
    "imports": "{
      default: myDefault,
      foo,
      bar,
    }",
    "options": undefined,
    "specifier": "'/modules/my-module.js'",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > named imports > should match named import(s) with renamed string literals 1`] = `
[
  {
    "0": "const { \\"h-i\\": hi } = await import('./hi.js')",
    "1": "{ \\"h-i\\": hi }",
    "2": "import('./hi.js')",
    "3": "'./hi.js'",
    "4": undefined,
    "groups": {
      "expression": "import('./hi.js')",
      "imports": "{ \\"h-i\\": hi }",
      "options": undefined,
      "specifier": "'./hi.js'",
    },
  },
  {
    "0": "const { 'j-k': jk } = await import(\\"./jk.js\\")",
    "1": "{ 'j-k': jk }",
    "2": "import(\\"./jk.js\\")",
    "3": "\\"./jk.js\\"",
    "4": undefined,
    "groups": {
      "expression": "import(\\"./jk.js\\")",
      "imports": "{ 'j-k': jk }",
      "options": undefined,
      "specifier": "\\"./jk.js\\"",
    },
  },
]
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > namespace imports > should match namespace import 1`] = `
{
  "0": "const color = await import(\\"colorette\\")",
  "1": "color",
  "2": "import(\\"colorette\\")",
  "3": "\\"colorette\\"",
  "4": undefined,
  "groups": {
    "expression": "import(\\"colorette\\")",
    "imports": "color",
    "options": undefined,
    "specifier": "\\"colorette\\"",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > side-effect imports > should match side-effect import 1`] = `
{
  "0": "await import('./modules/my-module.js')",
  "1": undefined,
  "2": "import('./modules/my-module.js')",
  "3": "'./modules/my-module.js'",
  "4": undefined,
  "groups": {
    "expression": "import('./modules/my-module.js')",
    "imports": undefined,
    "options": undefined,
    "specifier": "'./modules/my-module.js'",
  },
}
`;

exports[`unit:DYNAMIC_IMPORT_REGEX > then/catch > should match import without await 1`] = `
{
  "0": "import(\\"/modules/my-module.js\\")",
  "1": undefined,
  "2": "import(\\"/modules/my-module.js\\")",
  "3": "\\"/modules/my-module.js\\"",
  "4": undefined,
  "groups": {
    "expression": "import(\\"/modules/my-module.js\\")",
    "imports": undefined,
    "options": undefined,
    "specifier": "\\"/modules/my-module.js\\"",
  },
}
`;
